<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">逛街助手</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- menu -->
    <string name="navdrawer_item_main">主页</string>
    <string name="navdrawer_item_huodong">活动</string>
    <string name="navdrawer_item_coupon">优惠券</string>
    <string name="navdrawer_item_tuangou">团购</string>
    <string name="navdrawer_item_store">找商户</string>
    <string name="navdrawer_item_my_profile">我的</string>
    <string name="drawer_close">打开</string>
    <string name="drawer_open">关闭</string>
    <string name="menu_title_food">美食</string>
    <string name="menu_title_dress">服饰</string>
    <string name="menu_title_shoes">鞋包</string>
    <string name="menu_title_digital">数码</string>
    <string name="menu_title_baby">母婴</string>
    <string name="menu_title_decorate">彩妆</string>
    <string name="menu_title_outside">户外</string>
    <string name="menu_title_daily">日用</string>
    <string name="main_item_week_recommend">每周推荐</string>
    <string name="main_item_coupon">优惠券</string>
    <string name="main_item_huodong">活动</string>
    <string name="main_item_flim">电影</string>
    <string name="image_description">Image</string>
    <string name="more">更多</string>
    <string name="hot_huodong">热门活动</string>
    <string name="new_huodong">最新活动</string>
    <string name="nextweek_huodong">下周活动</string>
    <string name="activity_status_off_shelf">该活动已下架</string>
    <string name="activity_time">活动时间</string>
    <string name="activity_detail">活动详情</string>
    <string name="store_label">商户：</string>
    <string name="address_label">地址：</string>
    <string name="telephone_label">电话：</string>
    <string name="all_store">全部适用商户</string>
    <string name="title_activity_huo_dong_detail">活动详情</string>
    <string name="coupon_count">已下载%1$s</string>
    <string name="valid_time_title">有效期</string>
    <string name="ticket_detail">优惠券详情</string>
    <string name="title_activity_coupon_detail">优惠券详情</string>
    <string name="exit_confirm">再按一次退出逛街助手</string>
    <string name="food">餐厅</string>
    <string name="food_coupon">优惠</string>
    <string name="food_huodong">活动</string>
    <string name="food_tuangou">团购</string>
    <string name="store_food_reservation">预定</string>
    <string name="store_food_takeout">外卖</string>
    <string name="tab_activity_hot">热门活动</string>
    <string name="tab_activity_latest">最新活动</string>
    <string name="tab_activity_come_soon">下周活动</string>
    <string name="alert_error">发送错误报告帮助我们改进</string>
    <string name="alert_error_title">出错啦！</string>
    <string name="bug_feedback_title">逛街助手(%1$s) 错误反馈</string>
    <string name="send_cofirm">发送</string>
    <string name="common_cancel">取消</string>
    <string name="food_tab_store">餐厅</string>
    <string name="food_tab_coupon">优惠券</string>
    <string name="food_tab_activity">活动</string>
    <string name="food_tab_deal">团购</string>
    <string name="store_food_look_blackboard">查看餐厅小黑板</string>
    <string name="store_food_advertise_dishes">推荐菜品</string>
    <string name="store_food_all_dishes">全部菜品</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_profile_ticket_package">我的券包</string>
    <string name="my_profile_my_tickets">我的门票</string>
    <string name="my_profile_order_manager">@string/my_profile_my_order</string>
    <string name="my_profile_my_order">我的订单</string>
    <string name="my_profile_my_reservation">我的预定</string>
    <string name="my_profile_member">我的会员卡</string>
    <string name="my_profile_message">消息中心</string>
    <string name="my_profile_password_manager">登录密码管理</string>
    <string name="my_profile_pay_password_manager">支付密码管理</string>
    <string name="my_profile_wx_bind">微信绑定</string>
    <string name="my_profile_my_collect">我的收藏</string>
    <string name="my_profile_my_cinema_ticket">我的影票</string>
    <string name="my_profile_my_cloud_parking">我的停车</string>
    <string name="select_all">全部选择</string>
    <string name="unselect_all">全部取消</string>
    <string name="my_profile_message_detail">消息详情</string>
    <string name="my_profile_bouns_detail">我的积分</string>
    <string name="my_profile_point_detail">积分明细</string>
    <string name="my_profile_consume_list">广场消费记录</string>
    <string name="my_profile_consume_summary">我的广场消费</string>
    <string name="my_profile_consume_detail">消费详情</string>
    <string name="my_profile_goto_all_consume">查看全部消费</string>
    <string name="my_profile_consume_recommend_prompt">根据您的消费记录，为您推荐...</string>
    <string name="my_profile_consume_recommend_prompt_for_no_consume">为您推荐下列优惠， 赶紧去广场消费吧</string>
    <string name="my_profile_consume_no_data">抱歉，您还没有广场消费记录</string>
    <string name="my_profile_consume_records">我的广场消费</string>
    <string name="my_profile_change_password">密码修改</string>
    <string name="my_profile_my_grade">我的等级</string>
    <string name="my_profile_my_point">我的积分</string>
    <string name="my_profile_mine_point">我的积分：%1$s</string>
    <string name="my_profile_look_my_info">登录即可查看我的积分、优惠券</string>
    <string name="my_profile_login">现在登录</string>
    <string name="my_profile_consume_share">秀给小伙伴</string>
    <string name="my_profile_logout">退出账号</string>
    <string name="my_profile_register1">没有账号？</string>
    <string name="my_profile_register2">快速注册</string>
    <string name="my_profile_register3">一个新账号</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_mob_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_free_register">免费注册</string>
    <string name="find_password">找回密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_protocol_link_note">《逛街助手服务协议》</string>
    <string name="register_protocol_note">我已阅读并同意</string>
    <string name="register">提交</string>
    <string name="login_title">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="food_store_detail">餐厅详情</string>
    <string name="tab_product_hot">热门</string>
    <string name="tab_product_promotion">促销</string>
    <string name="tab_product_new">新品</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="product_parameter">商品参数</string>
    <string name="product_recommendation">推荐说明</string>
    <string name="product_status_off_shelf">该商品已下架</string>
    <string name="product_detail">商品详情</string>
    <string name="title_activity_deal">DealActivity</string>
    <string name="loading">正在加载中...</string>
    <string name="network_setting">网络设置</string>
    <string name="error_info">出了点小问题</string>
    <string name="loading_data">正在很努力地很努力地加载中</string>
    <string name="network_slow">网络不给力,等等再试吧..</string>
    <string name="refresh">刷新</string>
    <string name="network_break">网络连接失败,请检查是否连接</string>
    <string name="open_network_failed">打开网络设置失败了，请手动打开</string>
    <string name="coupon_detail">优惠券详情</string>
    <string name="title_activity_store">所有商户</string>
    <string name="title_activity_store_detail">商户详情</string>
    <string name="store_coupon">优惠券</string>
    <string name="store_activity">活动</string>
    <string name="store_display_product">宝贝</string>
    <string name="dummy_text2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.\\n\\nCras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien.</string>
    <string name="expand_text">更多</string>
    <string name="collapse_text">收起</string>
    <string name="share_wechat">分享到微信</string>
    <string name="share_wechat_timeline">分享到微信朋友圈</string>
    <string name="share_qq">分享到QQ</string>
    <string name="share_weibo">分享到微博</string>
    <string name="dialog_cancel">取消</string>
    <string name="wechat_not_install">未安装微信</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败，请重试或退出</string>
    <string name="share_content_coupon_ticket">优惠来啦，快来火速围观！</string>
    <string name="share_content_activity">小伙伴们，万达广场的这个活动很给力哦！</string>
    <string name="share_content_deal_ticket">给力团购，亲们一起来团购呀！</string>
    <string name="share_content_product">给力“宝贝”大家一起看看吧！</string>
    <string name="title_activity_launcher">LauncherActivity</string>

</resources>
