<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/ads_header"/>

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        style="@style/TabRadioGroupStyle">

        <RadioButton
            android:id="@+id/rb_tab_store"
            style="@style/UnderlineTabItemStyle"
            android:text="@string/food_tab_store" />

        <RadioButton
            android:id="@+id/rb_tab_coupon"
            style="@style/UnderlineTabItemStyle"
            android:text="@string/food_tab_coupon" />

        <RadioButton
            android:id="@+id/rb_tab_activity"
            style="@style/UnderlineTabItemStyle"
            android:text="@string/food_tab_activity" />

        <RadioButton
            android:id="@+id/rb_tab_deal"
            style="@style/UnderlineTabItemStyle"
            android:text="@string/food_tab_deal" />
    </RadioGroup>

</LinearLayout>