<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/ads_header"/>
    <RadioGroup
        android:id="@+id/rg_tab_bar"
        style="@style/TabRadioGroupStyle"
        android:dividerPadding="0.0dip">

        <RadioButton
            android:id="@+id/rb_tab_activity_hot"
            style="@style/UnderlineTabItemStyle"
            android:checked="true"
            android:text="@string/tab_activity_hot" />

        <RadioButton
            android:id="@+id/rb_tab_activity_latest"
            style="@style/UnderlineTabItemStyle"
            android:text="@string/tab_activity_latest" />

        <RadioButton
            android:id="@+id/rb_tab_activity_come_soon"
            style="@style/UnderlineTabItemStyle"
            android:text="@string/tab_activity_come_soon" />
    </RadioGroup>

</LinearLayout>