<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_myprofile_info"
        style="@style/DetailItemBackgroundStyle"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/et_login_phone"
            style="@style/EditTextPhoneStyle"
            android:hint="@string/login_mob_hint"
            android:inputType="number" />

        <View style="@style/HorizontalDividerDefaultStyle" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/EditTextDefaultStyle"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/HighLightButtonAlignParentBottomStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:layout_marginTop="0.0dip"
        android:text="@string/login_login" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_free_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"
            android:paddingBottom="5.0dip"
            android:paddingLeft="@dimen/default_horizontal_margin"
            android:paddingRight="0dip"
            android:paddingTop="5.0dip"
            android:singleLine="true"
            android:text="@string/login_free_register"
            android:textColor="@color/c6"
            android:textSize="@dimen/h3" />

        <TextView
            android:id="@+id/tv_login_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:paddingBottom="5.0dip"
            android:paddingRight="@dimen/default_horizontal_margin"
            android:paddingLeft="0dip"
            android:paddingTop="5.0dip"
            android:singleLine="true"
            android:text="@string/find_password"
            android:textColor="@color/c6"
            android:textSize="@dimen/h3" />
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
